Release 0.1 	Thu Jun 11 15:45:22 PDT 1998
	Cleanup, port to DEC, Solaris, AIX.

	Added MB / GB / TB abbreviations.

	Added DEC_HACK for ignoring some bad data (see comment in quota.c).

Release 0.2	Thu Aug 27 11:37:22 PDT 1998
	Changed abbrev():quota.c so 1000-1023MB is displayed GB (one less char)
	
	Changed HASBLOCK, HASFILE macros so -1 also indicates no quota (NetApp)

Release 0.3	Fri Aug 28 14:35:01 PDT 1998
	Added field to quota.fs file for percentage, which, if nonzero,
	causes quota to report when user has exceeded this percentage of hard
	quota.  Added for benefit of simplitic quotas on NetApp boxes
	(just implements hard quota; no soft quota, no grace period)

Internal Livermore Releases
	quota.fs renamed to quota.conf, getfs.[c,h] renamed to getconf.[c.h].

	Eliminated first field ("code") of quota.conf which was no longer used.

	Use getopt() instead of ad-hoc argv processing.  (Now it is possible
	to specify -v and -r at the same time).

	Added quota.1 and quota.conf.5 man pages.

	Release 1.0

	CSUC granted permission to release under GPL and (c) Jim Garlick.
        Added GPL text to all .c files and GPL licence in ./GPL.

	Release 1.1

Wed Apr  3 16:08:58 PST 2002 garlick
	Changed quota.conf path to /usr/local/etc.

	Minor cleanup.

	Fix overflow problem in OVERTHRESH macro in quota.c where 25G used
	of 100G quota triggered 90% exceeded message.

	Minor cleanup and RPMification for Linux.

	Changed quota.conf path to /etc.

	Tag quota-1-2-1chaos.

Wed Apr 10 12:25:05 PDT 2002 garlick
	Add -f option to read config file from user-specified path.

	Tru64 users in >16 groups would fail authunix_create_default().
	Call authunix_create() instead (Dave Fox, GNATS #48).

	Look for quota.conf in /usr/local/etc and override to /etc for
	spec file on Linux.

	Tag quota-1-2-2chaos.