@@ -4,16 +4,16 @@
  * Copyright (C) 1995-2000  Jim Garlick
  */
 typedef struct {
-	char *desc;
-	char *host;
-	char *path;
-	int thresh;
-} sysfs_t;	
+	char *cf_desc;
+	char *cf_host;
+	char *cf_path;
+	int cf_thresh;
+} confent_t;	
 
 #ifndef _PATH_QUOTA_CONF
 #define _PATH_QUOTA_CONF "/usr/local/etc/quota.conf"
 #endif
 
-void setconf_ent(char *path);
-void endconf_ent();
-sysfs_t *getconf_ent();
+void setconfent(char *path);
+void endconfent(void);
+confent_t *getconfent(void);
