@@ -57,3 +57,6 @@ Wed Apr 10 12:25:05 PDT 2002 garlick
 	spec file on Linux.
 
 	Tag quota-1-2-2chaos.
+
+Thu Apr 11 04:15:36 PDT 2002 garlick
+	Some minor code cleanup.
